Clean up code, improve URL parsing, and implement configurable timeout
- Change license from MIT to custom source code license
- Remove unused imports, variables, methods, and trailing newlines
- Improve URL parsing across multiple files by using URI.create().toURL() for better handling of special characters
- Implement AutoCloseable for TokenManager with scheduled background cleanup of invalid tokens
- Make web server request timeout configurable via WebServerConfig instead of hardcoded
- Clean up unused exception types and add IllegalArgumentException to URL parsing catch blocks